Revision History for PHP Module for IP2Location
8.2.1 Tue Mar 24 17:29:00 2020
	* Fixes

	- Fixed getCidr() function to return an array of subnet.

8.2.0 Thu Mar 19 10:16:00 2020
	* Fixes

	- Added IP2Location web service lookup.

8.1.1 Wed Oct 09 08:58:00 2019
	* Fixes
	
	- Reduce file I/O to improve query performance.
	
8.1.0 Mon Sep 30 08:58:00 2019
	* Fixes
	
	- Optimized library performance.

8.0.2 Sun Oct 1 10:01:00 2016
	* Fixes
	
	- Issue of shift operator for big number in php

8.0.1 Tue Aug 1 11:00:00 2016
	* Fixes
	
	- Support 2 new interfaces: getDatabaseVersion and getModuleVersion 

8.0.0 Tue Jul 5 10:00:00 2016
	* Fixes
	
	- Add code to lookup for index section which available in new BIN format 
	
7.2.5 Fri Jun 10 15:40:23 2016
	* Fixes:
	
	- Fix the IP lookup issue for DB24

7.2.4 Wed Jan 06 14:44:23 2016
	* Fixes:

	- Fixed IPv6 lookup issue.

7.2.3 Wed Aug 12 10:29:37 2015
	* Fixes:

	- Fix IPv4 lookup issue.

7.2.2 Thu Jul 30 10:27:55 2015
	* Fixes:

	- Defended against 32 bit overflow in a couple more places.
	- Added checks for default / unset / infinite memory limits.
	- Fixed lookup function, in order for it to consistently return the correct datatype.


	* Enhancements:

	- Cached the result of the memory limit calculation in order not to recheck it for each instantiation.


	* Additions:
	
	- Added exception code constants to ease the handling of exceptional conditions in the client.
	- Added the ability to set default returned fields on construction, in order not to have to pass them around constantly.


7.2.0 Wed Jul 29 14:07:23 2015
	**Special thanks to Mariano (mariano.perez.rodriguez [at] gmail.com) for working on this release**
	
	* Removals:

	- Removed IP2LocationRecord class, it served little purpose and an array response would be much more flexible (see below).
	- Removed everything to do with endianness (there was some leftover code and constants).
	- Removed IP version constants, they were unused.