@@ -1,4 +1,7 @@
 Revision History for PHP Module for IP2Location
+
+Please refer https://github.com/chrislim2888/IP2Location-PHP-Module/releases to future updates.
+
 8.2.1 Tue Mar 24 17:29:00 2020
 	* Fixes
 
